2006-05-04  Callum McKenzie  <callum@spooky-possum.org>

	* rules/union_square.scm (autoplay-foundations): 
	* rules/saratoga.scm (autoplay-foundations): 
	* rules/jumbo.scm (autoplay-foundations): 
	* rules/gypsy.scm (autoplay-foundations): 
	* rules/athena.scm (autoplay-foundations): 
	* rules/agnes.scm (autoplay-foundations): 
	* rules/klondike.scm (autoplay-foundations): 
	* rules/freecell.scm (move-low-cards): Use delayed-call.

	* cscmi.c: Add a delayed-call function so scheme code can animate
	auto-moves by delaying parts of the recursion. See bug #338453.

2006-05-02  Callum McKenzie  <callum@spooky-possum.org>

	* rules/freecell.scm: Remove some unused option variables.

2006-04-29  Callum McKenzie  <callum@spooky-possum.org>

	* sol.c (create_sol_board): Patch from Amnon Aaronsohn to disable
	double-buffering since we do our own. Bug #338699.

2006-04-21  Callum McKenzie  <callum@spooky-possum.org>

	* card.c:
	* card.h:
	* cscmi.c:
	* cscmi.h:
	* draw.c:
	* events.c:
	* menu.c:
	* menu.h:
	* press_data.c:
	* slot.c:
	* slot.h:
	* sol.c:
	* sol.h: Patch from Amnon Aaronsohn to cleanup many minor aspects 
	of the code. Minor fixes from myself. See bug #338386 for details 
	and commentary.

2006-04-14  Callum McKenzie  <callum@spooky-possum.org>

	* sol.c: Replace the explicit theme gconf key with a symbolic
	version.

2006-04-13  Callum McKenzie  <callum@spooky-possum.org>

	* sol.c (retrieve_state): Fix the default card images to be
	something that exists.

2006-04-06  Thomas Andersen  <phomes@gmail.com>

	* menu.c: Update About dialog

2006-04-04  Callum McKenzie  <callum@spooky-possum.org>

	* sol.c: Patch from Przemys©aw Grzegorczyk to unref
	the GnomeProgram in all main loops.

2006-04-02  Callum McKenzie  <callum@spooky-possum.org>

	* menu.c: 
	* sol.c: 
	* sol.desktop.in:
	* freecell.desktop.in:
	* Makefile.am: Update the icon handling to use icon themes. Rename
	gnome-cardgame.png to gnome-freecell.png.
