@@ -1,3 +1,9 @@
+2006-05-06  Callum McKenzie  <callum@spooky-possum.org>
+
+	* menu.h: 
+	* menu.c: Patch from chpe to display the help on the same screen
+	as the application. Bug #340272.
+
 2006-05-04  Callum McKenzie  <callum@spooky-possum.org>
 
 	* rules/union_square.scm (autoplay-foundations): 
